# galaxy-rs

./: .env.example  .gitignore  Cargo.toml  README.md
database/: Cargo.toml
database/migrations/2020-11-11-103059_create_user/: up.sql
database/migrations/2020-11-11-103059_users/: up.sql
database/migrations/2020-11-18-073513_confirmations/: down.sql  up.sql
database/src/: lib.rs  models.rs  schema.rs
database/src/models/: auth.rs  confirmations.rs  users.rs
error/: Cargo.toml
error/src/: auth.rs  lib.rs
server/: Cargo.toml
server/src/: main.rs
server/src/middleware/: registration.rs
server/src/routes/: users.rs
