[package]
name = "database"
version = "0.1.0"
authors = ["VITALISED <william.castro30@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
log = "0.4.11"
serde = "1.0.117"

error = { path = "../error" }