[package]
name = "server"
version = "0.1.0"
authors = ["VITALISED <william.castro30@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
log = "0.4.11"
env_logger = "0.8.1"
dotenv = "0.15.0"

database = { path = "../database" }